--- a/styles/style.css
+++ b/styles/style.css
@@ -73,3 +73,54 @@ nav{
   }
 }
 
+.alert {
+  padding: 1px;
+  line-height: 0.5em;
+  background-color: #f3f3f3;
+  text-align: center;
+}
+.alert p {
+  font-weight: 500;
+}
+.alert span {
+  font-weight: 400;
+  font-size: 0.9rem;
+}
+.alert a {
+  color: black;
+}
+
+.hero {
+  padding: 6rem;
+  text-align: center;
+  background-color: black;
+}
+.hero .hero-subtitle {
+  color: white;
+  font-weight: 500;
+  font-size: 0.95rem;
+}
+.hero .hero-title {
+  color: white;
+  font-size: 2.5rem;
+  text-transform: uppercase;
+  margin-top: -0.7rem;
+  font-weight: 700;
+  letter-spacing: -0.03em;
+}
+.hero .hero-quote {
+  margin-top: -1rem;
+  font-size: 1.1rem;
+  color: white;
+  font-weight: 500;
+}
+.hero button {
+  background-color: white;
+  color: black;
+  border-radius: 2rem;
+  padding: 0.7rem 1.5rem;
+  border: none;
+  font-weight: 600;
+  font-size: 1rem;
+}
+
