--- a/styles/style.css
+++ b/styles/style.css
@@ -28,7 +28,13 @@
 /****************/
 
 /* jouw code */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
 
+body {
+  font-family: 'Roboto', sans-serif;
+  margin: 0;
+  padding: 0;
+}
 nav{
 
   display: grid;
