--- a/styles/style.css
+++ b/styles/style.css
@@ -148,6 +148,82 @@ nav .right ::placeholder {
   margin-top: 0.7rem;
 }
 
+.video {
+  margin-top: 4rem;
+}
+.video video {
+  width: 100%;
+  height: 650px;
+  object-fit: cover;
+}
+
+.prev {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  left: 5%;
+  width: 45px; /* Adjust the width to make it completely round */
+  height: 45px; /* Set the height to match the width */
+  color: black;
+  font-weight: lighter;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 50%;
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  right: 5%;
+  width: 45px; /* Adjust the width to make it completely round */
+  height: 45px; /* Set the height to match the width */
+  color: black;
+  font-weight: lighter;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 50%;
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.carousel-container {
+  width: calc(100% - 4rem); /* 100% width with 2rem margin on each side */
+  overflow: hidden;
+  position: relative;
+  margin-top: 1rem;
+  margin-left: 2rem; /* Left margin */
+  margin-right: 2rem; /* Right margin */
+}
+
+.carousel-wrapper {
+  display: flex;
+  transition: transform 0.5s ease-in-out;
+}
+
+.carousel-item {
+  flex: 0 0 calc(25% - 1rem); /* Adjust the min-width and width of each slide with a 1rem gap */
+  box-sizing: border-box;
+  overflow: hidden;
+  margin-right: 1rem; /* Add margin to the right of each slide for the gap */
+}
+
+.carousel-item img {
+  width: 100%;
+  height: 500px; /* Set the desired height for all images */
+  object-fit: cover;
+}
+
+.carousel-item:last-child {
+  margin-right: 0; /* Remove margin from the last slide to avoid extra space */
+}
+
 
 
 
