--- a/styles/style.css
+++ b/styles/style.css
@@ -21,7 +21,7 @@
 
 /* jouw code */
 
-@import url("images/C4A7FDCF-91F9-43FB-B41F-632D2E731706.JPEG");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap");
 body {
   font-family: "Roboto", sans-serif;
   margin: 0;
