--- a/styles/style.css
+++ b/styles/style.css
@@ -85,6 +85,7 @@ nav .right ::placeholder {
   padding: 6rem;
   text-align: center;
   background-image: url(images/C4A7FDCF-91F9-43FB-B41F-632D2E731706.JPEG);
+  background-color: #111;
   height: 100%;
   width: 100%;
   background-position: center;
