--- a/styles/style.css
+++ b/styles/style.css
@@ -15,6 +15,9 @@
 }
 
 
+
+
+
 /****************/
 /* JOUW STYLING */
 /****************/
@@ -34,22 +37,27 @@ nav {
   place-items: center;
   padding: 1rem 0rem;
 }
+
 nav .left img {
   width: 65px;
 }
+
 nav .center {
   display: flex;
   gap: 1rem;
 }
+
 nav .center p {
   cursor: pointer;
   color: black;
   font-weight: 500;
 }
+
 nav .right img {
   width: 30px;
   display: none;
 }
+
 nav .right input {
   background-color: #f3f3f3;
   border: none;
@@ -57,6 +65,7 @@ nav .right input {
   padding: 0.7rem;
   width: 150px;
 }
+
 nav .right ::placeholder {
   color: #cecece;
   font-weight: 500;
@@ -73,10 +82,12 @@ nav .right ::placeholder {
 .alert p {
   font-weight: 500;
 }
+
 .alert span {
   font-weight: 400;
   font-size: 0.9rem;
 }
+
 .alert a {
   color: black;
 }
@@ -84,11 +95,12 @@ nav .right ::placeholder {
 .hero {
   padding: 6rem;
   text-align: center;
-  background-color: #111;
+  background-image: url('../images/C4A7FDCF-91F9-43FB-B41F-632D2E731706.JPEG');
   height: 100%;
   width: 100%;
   background-position: center;
   background-size: cover;
+  background-color: black;
 }
 
 .hero .hero-subtitle {
@@ -96,6 +108,7 @@ nav .right ::placeholder {
   font-weight: 500;
   font-size: 0.95rem;
 }
+
 .hero .hero-title {
   color: white;
   font-size: 2.5rem;
@@ -104,12 +117,14 @@ nav .right ::placeholder {
   font-weight: 700;
   letter-spacing: -0.03em;
 }
+
 .hero .hero-quote {
   margin-top: -1rem;
   font-size: 1.1rem;
   color: white;
   font-weight: 500;
 }
+
 .hero button {
   background-color: white;
   color: black;
@@ -124,17 +139,20 @@ nav .right ::placeholder {
   line-height: 1em;
   text-align: center;
 }
+
 .hero2 .hero2-title {
   font-weight: 900;
   font-size: 5rem;
   letter-spacing: -0.05em;
   text-transform: uppercase;
 }
+
 .hero2 .hero2-description {
   margin-top: -1.5rem;
   font-weight: 400;
   font-size: 1.4rem;
 }
+
 .hero2 button {
   background-color: black;
   color: white;
@@ -148,11 +166,51 @@ nav .right ::placeholder {
 
 .video {
   margin-top: 4rem;
+  position: relative;
 }
+
 .video video {
   width: 100%;
   height: 650px;
   object-fit: cover;
+}
+
+.video .video-content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.video .video-content .video-title {
+  line-height: 1em;
+  font-weight: 900;
+  font-size: 5rem;
+  letter-spacing: -0.05em;
+  text-transform: uppercase;
+  color: white;
+  margin-bottom: -0.1rem;
+}
+
+.video .video-content .video-description {
+  font-size: 1rem;
+  color: white;
+}
+
+.video .video-content button {
+  margin-top: 1rem;
+  background-color: white;
+  color: black;
+  border-radius: 2rem;
+  padding: 0.7rem 1.5rem;
+  border: none;
+  font-weight: 600;
+  font-size: 1rem;
+}
+
+.video2 {
+  margin-top: 15rem;
 }
 
 .prev {
@@ -266,18 +324,22 @@ nav .right ::placeholder {
   margin-right: 2rem; 
   margin-top: 3rem;
 }
+
 .carousel-container2 .carousel-title-2 {
   font-size: 1.5rem;
 }
+
 .carousel-container2 .description .title {
   font-size: 1rem;
   font-weight: 500;
 }
+
 .carousel-container2 .description .subtitle {
   margin-top: -0.7rem;
   color: gray;
   font-weight: 400;
 }
+
 .carousel-container2 .description .price {
   margin-top: -0.5rem;
   font-weight: 500;
@@ -422,6 +484,7 @@ nav .right ::placeholder {
   margin-right: 2rem; 
   margin-top: 3rem;
 }
+
 .trending h2 {
   font-size: 1.2rem;
 }
@@ -453,12 +516,15 @@ nav .right ::placeholder {
   display: flex;
   gap: 1rem;
 }
+
 .app .start {
   position: relative;
 }
+
 .app .start img {
   width: 100%;
 }
+
 .app .start p {
   position: absolute;
   bottom: 20%;
@@ -467,6 +533,7 @@ nav .right ::placeholder {
   font-size: 1.5rem;
   text-shadow: 1px 1px 1px rgb(0, 0, 0);
 }
+
 .app .start button {
   cursor: pointer;
   position: absolute;
@@ -480,9 +547,11 @@ nav .right ::placeholder {
   font-weight: 600;
   font-size: 1rem;
 }
+
 .app .end {
   position: relative;
 }
+
 .app .end img {
   width: 100%;
 }
@@ -494,6 +563,7 @@ nav .right ::placeholder {
   font-size: 1.5rem;
   text-shadow: 1px 1px 1px rgb(0, 0, 0);
 }
+
 .app .end button {
   cursor: pointer;
   position: absolute;
@@ -511,19 +581,24 @@ nav .right ::placeholder {
 .section .more {
   margin: 2rem 2rem;
 }
+
 section .more .more-title {
   font-size: 1.5rem;
 }
+
 .more .carts {
   display: flex;
   gap: 1rem;
 }
+
 .more .carts .cart {
   position: relative;
 }
+
 .more .carts .cart img {
   width: 100%;
 }
+
 .more .carts .cart .buttons button {
   cursor: pointer;
   position: absolute;
@@ -544,12 +619,212 @@ footer {
   place-content: center;
   gap: 5rem;
 }
+
 footer .row .row-title {
   font-size: 1rem;
   font-weight: 500;
 }
+
 footer .row .row-menu p {
   font-size: 0.95rem;
+}
+
+.accordion-title {
+  margin-top: 10rem;
+  margin-left: 2rem;
+  margin-right: 2rem;
+  font-size: 1.5rem;
+}
+
+.accordion-container {
+  margin-top: 4rem;
+}
+
+.accordion-container .accordion {
+  background-color: transparent;
+  color: black;
+  cursor: pointer;
+  padding: 2rem;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 1.5rem;
+  transition: 0.4s;
+}
+
+.accordion-container .accordion:after {
+  content: "+";
+  color: black;
+  font-weight: lighter;
+  float: right;
+  margin-left: 5px;
+}
+
+.accordion-container .active:after {
+  content: "−";
+}
+
+.accordion-container .panel {
+  padding: 0 2rem;
+  background-color: white;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.2s ease-out;
+  border-bottom: 1px #e5e5e5 solid;
+}
+
+.accordion-container .panel a {
+  color: black;
+}
+
+.page-title {
+  font-size: 1.5rem;
+  margin: 2rem 2rem;
+}
+
+.trending-carousel-container {
+  position: relative;
+  width: calc(100% - 4rem); 
+  overflow: hidden;
+  margin-left: 2rem;
+  margin-right: 2rem;
+  margin-top: 3rem;
+}
+
+.trending-carousel-container .carousel-title {
+  font-size: 1.5rem;
+}
+
+.trending-carousel-container .item-description {
+  position: absolute;
+  left: 5%;
+  bottom: 5%;
+}
+
+.trending-carousel-container .item-description .item-title {
+  font-size: 1rem;
+  color: white;
+}
+
+.trending-carousel-container .item-description .item-subtitle {
+  margin-top: -0.7rem;
+  color: white;
+  font-weight: 400;
+  font-size: 1.5rem;
+}
+
+.trending-carousel-container .item-description button {
+  background-color: white;
+  color: black;
+  border-radius: 2rem;
+  padding: 0.7rem 1.5rem;
+  border: none;
+  font-weight: 600;
+  font-size: 1rem;
+}
+
+.carousel-wrapper {
+  display: flex;
+  transition: transform 0.5s ease-in-out;
+  margin-top: 2rem;
+}
+
+.carousel-item {
+  flex: 0 0 calc(33.33% - 1rem);
+  box-sizing: border-box;
+  overflow: hidden;
+  margin-right: 1rem; 
+  position: relative;
+}
+
+.carousel-item img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+.carousel-item:last-child {
+  margin-right: 0; 
+}
+
+.membership-container {
+  position: relative;
+  margin-top: 1rem;
+  margin-left: 2rem; 
+  margin-right: 2rem; 
+}
+
+.more2-title-1 {
+margin: 5rem 2rem;
+font-size: 1.5rem;
+font-weight: 400;
+}
+
+.more2 {
+text-align: center;
+margin-top: 7rem;
+display: flex;
+place-content: center;
+gap: 10rem;
+margin-left: 2rem;
+margin-right: 2rem;
+}
+
+.more2 .icon img {
+width: 100px;
+}
+
+.more2 .icon .more2-title {
+font-size: 1.5rem;
+font-weight: 500;
+}
+
+.more2 .icon .more2-description {
+font-size: 1rem;
+max-width: 300px;
+}
+
+.more-title {
+font-size: 1.5rem;
+margin-left: 4rem;
+margin-top: 5rem;
+font-weight: 400;
+}
+
+.more {
+margin: 5rem 2rem;
+}
+
+.more .membership-container {
+display: flex;
+text-align: center;
+place-content: center;
+gap: 10rem;
+}
+
+.more .membership-container .membership img {
+width: 100px;
+}
+
+.more .membership-container .membership .membership-title {
+font-size: 1.5rem;
+}
+
+.more .membership-container .membership .membership-description {
+font-size: 1rem;
+max-width: 250px;
+margin-top: 1rem;
+margin-bottom: 1rem;
+}
+
+.more .membership-container .membership a {
+color: black;
+font-weight: 500;
+}
+
+.membership-logo img {
+width: 100%;
 }
 
 @media (max-width: 1450px) {
@@ -833,6 +1108,373 @@ footer .row .row-menu p {
     font-weight: 600;
     font-size: 1rem;
     margin-top: 0.7rem;
+  }
+}
+
+footer {
+  margin: 5rem 2rem;
+  display: flex;
+  place-content: center;
+  gap: 5rem;
+}
+footer .row .row-title {
+  font-size: 1rem;
+  font-weight: 500;
+}
+footer .row .row-menu p {
+  font-size: 0.95rem;
+}
+
+@media (max-width: 1450px) {
+  .carousel-item,
+  .carousel-item2,
+  .carousel-item3,
+  .carousel-item4 {
+    flex: 0 0 calc(33.33% - 1rem);
+  }
+}
+@media (max-width: 1340px) {
+  .more {
+    margin: 5rem 2rem;
+  }
+  .more .membership-container {
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
+    text-align: center;
+    place-content: center;
+    gap: 10rem;
+  }
+  .more .membership-container .membership img {
+    width: 100px;
+  }
+  .more .membership-container .membership .membership-title {
+    font-size: 1.5rem;
+  }
+  .more .membership-container .membership .membership-description {
+    font-size: 1rem;
+    max-width: 100%;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+  }
+  .more .membership-container .membership a {
+    color: black;
+    font-weight: 500;
+  }
+}
+@media (max-width: 1200px) {
+  .carousel-item,
+  .carousel-item2,
+  .carousel-item3,
+  .carousel-item4 {
+    flex: 0 0 calc(50% - 1rem);
+  }
+}
+@media (max-width: 1080px) {
+  nav {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    place-items: center;
+    padding: 1rem 0rem;
+  }
+  nav .left img {
+    width: 65px;
+  }
+  nav .center {
+    display: flex;
+    gap: 1rem;
+  }
+  nav .center p {
+    display: none;
+    cursor: pointer;
+    color: black;
+    font-weight: 500;
+  }
+  nav .right img {
+    width: 30px;
+    display: block;
+  }
+  nav .right input {
+    display: none;
+    background-color: #f3f3f3;
+    border: none;
+    border-radius: 3rem;
+    padding: 0.7rem;
+    width: 150px;
+  }
+  nav .right ::placeholder {
+    color: #cecece;
+    font-weight: 500;
+    font-size: 1rem;
+    padding: 0rem 1rem;
+  }
+}
+@media (max-width: 960px) {
+  .more2 {
+    text-align: center;
+    margin-top: 7rem;
+    display: flex;
+    place-content: center;
+    gap: 5rem;
+    margin-left: 2rem;
+    margin-right: 2rem;
+  }
+  .more2 .icon img {
+    width: 100px;
+  }
+  .more2 .icon .more2-title {
+    font-size: 1.5rem;
+    font-weight: 500;
+  }
+  .more2 .icon .more2-description {
+    font-size: 1rem;
+    max-width: 300px;
+  }
+  footer {
+    margin: 5rem 2rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    place-content: center;
+    gap: 5rem;
+  }
+  footer .row .row-title {
+    font-size: 1rem;
+    font-weight: 500;
+  }
+  footer .row .row-menu p {
+    font-size: 0.95rem;
+  }
+  .more {
+    margin: 2rem 2rem;
+  }
+  .more .more-title {
+    font-size: 1.5rem;
+  }
+  .more .carts {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+  .more .carts .cart {
+    position: relative;
+  }
+  .more .carts .cart img {
+    width: 100%;
+  }
+  .more .carts .cart .buttons button {
+    cursor: pointer;
+    position: absolute;
+    bottom: 5%;
+    left: 5%;
+    background-color: white;
+    color: black;
+    border-radius: 2rem;
+    padding: 0.7rem 1.5rem;
+    border: none;
+    font-weight: 600;
+    font-size: 1rem;
+  }
+  .app {
+    margin: 2rem 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+  .app .start {
+    position: relative;
+  }
+  .app .start img {
+    width: 100%;
+  }
+  .app .start p {
+    position: absolute;
+    bottom: 20%;
+    left: 5%;
+    color: black;
+    font-size: 1.5rem;
+  }
+  .app .start button {
+    cursor: pointer;
+    position: absolute;
+    bottom: 10%;
+    left: 5%;
+    background-color: white;
+    color: black;
+    border-radius: 2rem;
+    padding: 0.7rem 1.5rem;
+    border: none;
+    font-weight: 600;
+    font-size: 1rem;
+  }
+  .app .end {
+    position: relative;
+  }
+  .app .end img {
+    width: 100%;
+  }
+  .app .end p {
+    position: absolute;
+    bottom: 20%;
+    left: 5%;
+    color: black;
+    font-size: 1.5rem;
+  }
+  .app .end button {
+    cursor: pointer;
+    position: absolute;
+    bottom: 10%;
+    left: 5%;
+    background-color: white;
+    color: black;
+    border-radius: 2rem;
+    padding: 0.7rem 1.5rem;
+    border: none;
+    font-weight: 600;
+    font-size: 1rem;
+  }
+  .carousel-item,
+  .carousel-item2,
+  .carousel-item3,
+  .carousel-item4 {
+    flex: 0 0 calc(100% - 1rem);
+  }
+}
+@media (max-width: 720px) {
+  .more2 {
+    text-align: center;
+    margin-top: 3rem;
+    display: flex;
+    flex-direction: column;
+    place-content: center;
+    gap: 5rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
+  }
+  .more2 .icon img {
+    width: 100px;
+  }
+  .more2 .icon .more2-title {
+    font-size: 1.5rem;
+    font-weight: 500;
+  }
+  .more2 .icon .more2-description {
+    font-size: 1rem;
+    max-width: 100%;
+  }
+  .more {
+    margin: 5rem 1rem;
+  }
+  .more .membership-container {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    place-content: center;
+    gap: 5rem;
+  }
+  .more .membership-container .membership img {
+    width: 100px;
+  }
+  .more .membership-container .membership .membership-title {
+    font-size: 1.5rem;
+  }
+  .more .membership-container .membership .membership-description {
+    font-size: 1rem;
+    max-width: 100%;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+  }
+  .more .membership-container .membership a {
+    color: black;
+    font-weight: 500;
+  }
+}
+@media (max-width: 670px) {
+  .prev,
+  .prev2,
+  .prev3,
+  .prev4,
+  .next,
+  .next2,
+  .next3,
+  .next4 {
+    display: none;
+  }
+  .hero2 {
+    line-height: 1em;
+    text-align: center;
+    padding: 0rem 1rem;
+  }
+  .hero2 .hero2-title {
+    font-weight: 900;
+    font-size: 3rem;
+    letter-spacing: -0.05em;
+    text-transform: uppercase;
+  }
+  .hero2 .hero2-description {
+    margin-top: -1.5rem;
+    font-weight: 400;
+    font-size: 1.4rem;
+  }
+  .hero2 button {
+    background-color: black;
+    color: white;
+    border-radius: 2rem;
+    padding: 0.7rem 1.5rem;
+    border: none;
+    font-weight: 600;
+    font-size: 1rem;
+    margin-top: 0.7rem;
+  }
+  .hero {
+    padding: 6rem 1rem;
+    text-align: center;
+    background-color: black;
+  }
+  .hero .hero-subtitle {
+    color: white;
+    font-weight: 500;
+    font-size: 0.95rem;
+  }
+  .hero .hero-title {
+    color: white;
+    font-size: 2rem;
+    text-transform: uppercase;
+    margin-top: -0.7rem;
+    font-weight: 700;
+    letter-spacing: -0.03em;
+  }
+  .hero .hero-quote {
+    margin-top: -1rem;
+    font-size: 1.1rem;
+    color: white;
+    font-weight: 500;
+  }
+  .hero button {
+    background-color: white;
+    color: black;
+    border-radius: 2rem;
+    padding: 0.7rem 1.5rem;
+    border: none;
+    font-weight: 600;
+    font-size: 1rem;
+  }
+}
+@media (max-width: 430px) {
+  footer {
+    margin: 5rem 2rem;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+    place-content: center;
+    gap: 1rem;
+  }
+  footer .row .row-title {
+    font-size: 1rem;
+    font-weight: 500;
+  }
+  footer .row .row-menu p {
+    font-size: 0.95rem;
   }
 }
 
